fix text alignment

--- a/src/styles/Activity.css
+++ b/src/styles/Activity.css
@@ -39,7 +39,7 @@
   line-height: 1.4;
 }
 .align-div-text {
-  margin: 38vh 8vw 0 -5vw !important;
+  margin: 40vh 8vw 0 -5vw !important;
 }
 .alignHeadings {
   color: var(--tezos-white);
