--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -16,7 +16,7 @@
 
 .header li a {
   display: block;
-  padding: 10px 25px;
+  padding: 10px 22px;
   color: white;
   text-decoration: none;
   cursor: pointer;
