--- a/src/styles/Partners.css
+++ b/src/styles/Partners.css
@@ -15,7 +15,7 @@
   top: 20px !important;
   position: relative;
   padding: 0 !important;
-  font-size: 14px;
+  font-size: 12px;
 }
 .line {
   width: 50vw;
